--- a/package.json
+++ b/package.json
@@ -18,7 +18,19 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "zod": "^3.22.4",
-    "zustand": "^4.5.1"
+    "zustand": "^4.5.1",
+    "use-sync-external-store": "1.4.0",
+    "escalade": "^3.2.0",
+    "jackspeak": "^2.3.6",
+    "minimatch": "^9.0.5",
+    "brace-expansion": "^2.0.1",
+    "ansi-regex": "^5.0.1",
+    "fs.realpath": "^1.0.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "once": "^1.4.0",
+    "path-is-absolute": "^1.0.1",
+    "wrappy": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
@@ -30,5 +42,19 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "resolutions": {
+    "use-sync-external-store": "1.4.0",
+    "escalade": "3.2.0",
+    "jackspeak": "2.3.6",
+    "minimatch": "9.0.5",
+    "brace-expansion": "2.0.1",
+    "ansi-regex": "5.0.1",
+    "fs.realpath": "1.0.0",
+    "inflight": "1.0.6",
+    "inherits": "2.0.4",
+    "once": "1.4.0",
+    "path-is-absolute": "1.0.1",
+    "wrappy": "1.0.2"
   }
 }
