--- a/package.json
+++ b/package.json
@@ -12,25 +12,27 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
-    "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1",
-    "react-hot-toast": "^2.4.1",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.1",
-    "use-sync-external-store": "1.4.0",
-    "escalade": "^3.2.0",
-    "jackspeak": "^2.3.6",
-    "minimatch": "^9.0.5",
-    "brace-expansion": "^2.0.1",
     "ansi-regex": "^5.0.1",
+    "brace-expansion": "^2.0.1",
+    "chart.js": "^4.4.7",
+    "escalade": "^3.2.0",
     "fs.realpath": "^1.0.0",
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
+    "jackspeak": "^2.3.6",
+    "minimatch": "^9.0.5",
+    "next": "14.1.0",
     "once": "^1.4.0",
     "path-is-absolute": "^1.0.1",
-    "wrappy": "^1.0.2"
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1",
+    "use-sync-external-store": "1.4.0",
+    "wrappy": "^1.0.2",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
